# saralkarorealestate

./: .gitignore  README.md
Frontend/: README.md  index.html  package-lock.json
Frontend/public/: manifest.webmanifest  sw.js
Frontend/src/: App.tsx  index.css  main.tsx
Frontend/src/components/auth/: Login.tsx
Frontend/src/components/dashboard/: BusinessPages.tsx  Dashboard.tsx  InventoryPage.tsx  OverviewPage.tsx
Frontend/src/components/layout/: AppSidebar.tsx  MobileBottomNav.tsx  appNavConfig.tsx
Frontend/src/lib/: authApi.ts  authStorage.ts  workspaceApi.ts
backend/: .env.example  .gitignore  README.md  pyproject.toml
backend/app/: db.py  main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: crud.py  router.py
backend/app/api/v1/routes/: auth.py  business.py  communication.py  finance.py  hrms.py  inventory.py  leads.py  projects.py  settings.py  workspace.py
backend/app/core/: config.py  security.py
backend/app/schemas/: auth.py
backend/app/services/: telephony.py
backend/scripts/: check_db.py
database/: .env.example  README.md  docker-compose.yml  init.sql  seed_plot_map.sql  seed_sample_data.sql
