[project]
name = "realstate-backend"
version = "0.1.0"
description = "FastAPI backend for the real estate ERP."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "email-validator>=2.2.0",
    "fastapi>=0.116.0",
    "httpx>=0.28.0",
    "pydantic-settings>=2.10.0",
    "pyjwt>=2.10.0",
    "pwdlib[argon2]>=0.2.1",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.12.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".uv-cache", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
ignore = ["B008", "E501", "S112", "S608"]
